[package]
name = "eden_chess"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
executor =[]

[dependencies]
derive_more = "0.99.17"
log = "0.4.21"
ratatui = "0.26.2"
crossterm = "0.27.0"
lazy_static = "1.4.0"
color-eyre = "0.6.3"
flexi_logger = "0.28.0"

